# booserver

./: .gitignore  LICENSE  Makefile  README.md  booserver.sql  booserver.workspace  booserver_linux.workspace
booclient/: CMakeLists.txt  booclient.cpp  booclient.desktop  booclient.h  booclient.po  booclient.project  booclient.xml  booclient_linux.project  buttons.cpp  buttons.h  chart.cpp  chart.h  connection.cpp  connection.h  date.cpp  date.h  dialogholiday.fbp  dialoglogin.fbp  dlg_holiday.cpp  dlg_holiday.h  dlg_login.cpp  dlg_login.h  doctor.cpp  doctor.h  gui.cpp  gui.fbp  gui.h  main.cpp  main.h  misc.h  profile.cpp  profile.h  repository.cpp  repository.h  rule.cpp  rule.h  win_resources.rc
booserver/: CMakeLists.txt  batch_config.cpp  batch_config.h  booserver.conf  booserver.cpp  booserver.project  booserver_brown.conf  booserver_linux.project  canvas.cpp  canvas.h  color_blue.conf  color_brown.conf  color_green.conf  color_grey.conf  color_orig.conf  color_pale_blue.conf  color_slate.conf  connection.cpp  connection.h  date.h  doctor.cpp  doctor.h  ftype.cpp  ftype.h  gst_exapmles.txt  http_streamer.cpp  http_streamer.h  image_builder.cpp  image_builder.h  multicast_streamer.cpp  multicast_streamer.h  options.cpp  options.h  png_files.cpp  png_saver.cpp  png_saver.h  profile.cpp  profile.h  provider.cpp  provider.h  (+20 more)
